--- a/entities/schema/platformics.yaml
+++ b/entities/schema/platformics.yaml
@@ -53,6 +53,8 @@ enums:
     permissible_values:
       s3:
         description: This file is accessible via the (AWS) S3 protocol
+      https:
+        description: This file is accessible via the HTTPS protocol
   FileUploadClient:
     permissible_values:
       browser:
