--- a/workflows/docker-compose.yml
+++ b/workflows/docker-compose.yml
@@ -12,7 +12,7 @@ x-db-variables: &db-variables
   ? PLATFORMICS_DATABASE_PORT=5432
   ? PLATFORMICS_DATABASE_USER=postgres
   ? PLATFORMICS_DATABASE_PASSWORD=password_postgres
-  ? PLATFORMICS_DATABASE_NAME=workflows
+  ? PLATFORMICS_DATABASE_NAME=platformics
 
 x-webservice-variables: &webservice-variables
   ? WORKERS=2
@@ -57,7 +57,7 @@ services:
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password_postgres
-      - POSTGRES_DB=workflows
+      - POSTGRES_DB=platformicsworkflows
       # The postgres image declares a mounted volume at /var/lib/postgresql/data
       # by default, which means that the data in that directory is difficult to
       # snapshot and export. Here, we're telling Postgres to use this (non-mounted)
@@ -71,7 +71,6 @@ services:
       args:
         - BUILDKIT_INLINE_CACHE=1
     image: "platformics-workflows"
-    platform: linux/arm64
     restart: always
     volumes:
       - .:/workflows
