--- a/workflows/pyproject.toml
+++ b/workflows/pyproject.toml
@@ -43,6 +43,7 @@ strcase = "^1.0.0"
 linkml-runtime = "^1.6.0"
 faker-enum = "^0.0.2"
 strawberry-graphql = "0.209.8"
+pytest-asyncio = "^0.23.5"
 
 
 [tool.poetry.group.dev.dependencies]
