CZID-9007 - Support hidden, readonly, and system-writable-only fields (#179)

--- a/entities/schema/platformics.yaml
+++ b/entities/schema/platformics.yaml
@@ -140,22 +140,35 @@ classes:
       id:
         identifier: true
         range: uuid
+        readonly: true # The API handles generating the values for these fields
+        required: true
       producing_run_id:
-        range: int
-        minimum_value: 0
+        range: uuid
+        required: true
+        annotations:
+          mutable: false  # This field can't be modified by an `Update` mutation
+          system_writable_only: True
       owner_user_id:
         range: int
         minimum_value: 0
+        required: true
+        readonly: true
       collection_id:
         range: int
         minimum_value: 0
+        required: true
+        annotations:
+          mutable: false
       created_at:
         range: date
         required: true
+        readonly: true
       updated_at:
         range: date
+        readonly: true
       deleted_at:
         range: date
+        readonly: true
     # NOTE - the LinkML schema doesn't support a native "plural name" field as far as I can tell, so
     # we're using an annotation here to tack on the extra functionality that we need. We do this because
     # English pluralization is hard, and we don't want to have to write a custom pluralization function.
@@ -169,6 +182,7 @@ classes:
       id:
         identifier: true
         range: uuid
+        required: true
       # This file's ID is stored in the entity column <entity_field_name>_id
       entity_field_name:
         range: string
@@ -220,10 +234,13 @@ classes:
       # If this Sample is a copy of what's in the Rails DB, store its ID here
       rails_sample_id:
         range: int
+        annotations:
+          mutable: false  # This field can't be modified by an `Update` mutation
+          system_writable_only: True
+      # Metadata provided by user
       name:
         range: string
         required: true
-      # Metadata provided by user
       sample_type:
         range: string
         required: true
@@ -245,6 +262,8 @@ classes:
       host_organism:
         range: HostOrganism
         inverse: HostOrganism.samples
+        annotations:
+          mutable: false
       sequencing_reads:
         range: SequencingRead
         multivalued: true
@@ -268,18 +287,26 @@ classes:
       sample:
         range: Sample
         inverse: Sample.sequencing_reads
+        annotations:
+          mutable: false
       # Wet lab protocol (used for SARS-CoV-2 CG where we ask the user for this in the UI)
       protocol:
         range: SequencingProtocol
+        annotations:
+          mutable: false
       # Files containing sequencing reads (R1 and R2 refer to read pairs 1/2 in Illumina paired-end sequencing)
       r1_file:
         range: File
+        readonly: true
       r2_file:
         range: File
+        readonly: true
       # Which sequencing technology / instrument was used?
       technology:
         range: SequencingTechnology
         required: true
+        annotations:
+          mutable: false
       # Did we sequence DNA or RNA?
       nucleic_acid:
         range: NucleicAcid
@@ -295,10 +322,14 @@ classes:
       taxon:
         range: Taxon
         inverse: Taxon.sequencing_reads
+        annotations:
+          mutable: false
       # Can specify a primer BED file, used to trim primers, e.g. for "Viral Consensus Genome" pipeline
       primer_file:
         range: GenomicRange
         inverse: GenomicRange.sequencing_reads
+        annotations:
+          mutable: false
       # Consensus Genomes generated from these Sequencing Reads
       consensus_genomes:
         range: ConsensusGenome
@@ -317,6 +348,7 @@ classes:
     attributes:
       file:
         range: File
+        readonly: true
       sequencing_reads:
         range: SequencingRead
         inverse: SequencingRead.primer_file
@@ -335,6 +367,7 @@ classes:
       # FASTA reference genome
       file:
         range: File
+        readonly: true
       name:
         range: string
         required: true
@@ -356,6 +389,8 @@ classes:
       accession_id:
         range: string
         required: true
+        annotations:
+          mutable: false
       accession_name:
         range: string
         required: true
@@ -363,6 +398,8 @@ classes:
         range: UpstreamDatabase
         required: true
         inverse: UpstreamDatabase.accessions
+        annotations:
+          mutable: false
       consensus_genomes:
         range: ConsensusGenome
         inverse: ConsensusGenome.accession
@@ -396,11 +433,12 @@ classes:
       # Indexes for this host for each tool we use
       indexes:
         range: IndexFile
-        multivalued: true
         inverse: IndexFile.host_organism
+        multivalued: true
       # Original reference FASTA file used to generate indexes for this host; used for our record keeping
       sequence:
         range: File
+        readonly: true
       # Samples that obtained from this host organism
       samples:
         range: Sample
@@ -421,9 +459,13 @@ classes:
         range: Sample
         inverse: Sample.metadatas
         required: true
+        annotations:
+          mutable: false
       field_name:
         range: string
         required: true
+        annotations:
+          mutable: false
       value:
         range: string
         required: true
@@ -446,20 +488,29 @@ classes:
         range: Taxon
         required: true
         inverse: Taxon.consensus_genomes
+        annotations:
+          mutable: false
       # Which SequencingRead this ConsensusGenome was created from
       sequence_read:
         range: SequencingRead
         required: true
         inverse: SequencingRead.consensus_genomes
+        annotations:
+          mutable: false
       # Must specify a reference sequence or accession for a CG run
       reference_genome:
         range: ReferenceGenome
         inverse: ReferenceGenome.consensus_genomes
+        annotations:
+          mutable: false
       accession:
         range: Accession
         inverse: Accession.consensus_genomes
+        annotations:
+          mutable: false
       # Consensus Genome sequence output by CG pipeline
       sequence:
+        readonly: true
         range: File
       # Metrics output by CG pipeline
       metrics:
@@ -472,6 +523,7 @@ classes:
       # Zip file containing intermediate outputs file output by CG pipeline
       intermediate_outputs:
         range: File
+        readonly: true
     annotations:
       plural: ConsensusGenomes
 
@@ -484,36 +536,68 @@ classes:
         range: ConsensusGenome
         inverse: ConsensusGenome.metrics
         required: true
+        annotations:
+          mutable: false
       reference_genome_length:
         range: float
+        annotations:
+          mutable: false
       percent_genome_called:
         range: float
+        annotations:
+          mutable: false
       percent_identity:
         range: float
+        annotations:
+          mutable: false
       gc_percent:
         range: float
+        annotations:
+          mutable: false
       total_reads:
         range: int
+        annotations:
+          mutable: false
       mapped_reads:
         range: int
+        annotations:
+          mutable: false
       ref_snps:
         range: int
+        annotations:
+          mutable: false
       n_actg:
         range: int
+        annotations:
+          mutable: false
       n_missing:
         range: int
+        annotations:
+          mutable: false
       n_ambiguous:
         range: int
+        annotations:
+          mutable: false
       coverage_depth:
         range: float
+        annotations:
+          mutable: false
       coverage_breadth:
         range: float
+        annotations:
+          mutable: false
       coverage_bin_size:
         range: float
+        annotations:
+          mutable: false
       coverage_total_length:
         range: int
+        annotations:
+          mutable: false
       coverage_viz:
         range: Array2dInt
+        annotations:
+          mutable: false
     annotations:
       plural: MetricsConsensusGenomes
 
@@ -534,16 +618,22 @@ classes:
       name:
         range: string
         required: true
+        annotations:
+          mutable: false
       is_phage:
         range: boolean
         required: true
       upstream_database:
         range: UpstreamDatabase
-        required: true
         inverse: UpstreamDatabase.taxa
+        required: true
+        annotations:
+          mutable: false
       upstream_database_identifier:
         range: string
         required: true
+        annotations:
+          mutable: false
       level:
         range: TaxonLevel
         required: true
@@ -588,13 +678,13 @@ classes:
         required: true
       taxa:
         range: Taxon
-        multivalued: true
         inverse: Taxon.upstream_database
+        multivalued: true
       # This is where NCBI indexes would live
       indexes:
         range: IndexFile
-        multivalued: true
         inverse: IndexFile.upstream_database
+        multivalued: true
       accessions:
         range: Accession
         inverse: Accession.upstream_database
@@ -623,13 +713,18 @@ classes:
       file:
         range: File
         required: true
+        readonly: true
       # Links to either upstream database or host organism
       upstream_database:
         range: UpstreamDatabase
         inverse: UpstreamDatabase.indexes
+        annotations:
+          mutable: false
       host_organism:
         range: HostOrganism
         inverse: HostOrganism.indexes
+        annotations:
+          mutable: false
     annotations:
       plural: IndexFiles
 
@@ -644,6 +739,7 @@ classes:
     attributes:
       tree:
         range: File
+        readonly: true
       format:
         range: PhylogeneticTreeFormat
         required: true
@@ -662,8 +758,11 @@ classes:
       download_type:
         range: BulkDownloadType
         required: true
+        annotations:
+          mutable: false
       file:
         range: File
+        readonly: true
     annotations:
       plural: BulkDownloads
 
@@ -681,3 +780,5 @@ classes:
         range: uuid
         identifier: true
         inverse: entity.id
+        annotations:
+          hidden: true
