--- a/platformics/codegen/tests/test_schemas/platformics.yaml
+++ b/platformics/codegen/tests/test_schemas/platformics.yaml
@@ -62,6 +62,20 @@ enums:
       level_phylum:
       level_kingdom:
       level_superkingdom:
+  FileAccessProtocol:
+    permissible_values:
+      s3:
+        description: This file is accessible via the (AWS) S3 protocol
+  FileUploadClient:
+    permissible_values:
+      browser:
+        description: File uploaded from the user's browser
+      cli:
+        description: File uploaded from the CLI
+      s3:
+        description: File uploaded from S3
+      basespace:
+        description: File uploaded from Illumina Basespace Cloud
 
 classes:
   Entity:
@@ -69,22 +83,40 @@ classes:
       id:
         identifier: true
         range: uuid
+        readonly: true # The API handles generating the values for these fields
+        required: true
       producing_run_id:
-        range: int
+        range: uuid
         minimum_value: 0
+        annotations:
+          mutable: false  # This field can't be modified by an `Update` mutation
+          system_writable_only: True
       owner_user_id:
         range: int
         minimum_value: 0
+        readonly: true
+        required: true
       collection_id:
         range: int
         minimum_value: 0
+        required: true
+        annotations:
+          mutable: false
       created_at:
         range: date
         required: true
+        readonly: true
       updated_at:
         range: date
+        readonly: true
       deleted_at:
         range: date
+        readonly: true
+    # NOTE - the LinkML schema doesn't support a native "plural name" field as far as I can tell, so
+    # we're using an annotation here to tack on the extra functionality that we need. We do this because
+    # English pluralization is hard, and we don't want to have to write a custom pluralization function.
+    # This basically means we now have our own "dialect" of LinkML to worry about. We may want to see if
+    # pluralization can be added to the core spec in the future.
     annotations:
       plural: Entities
  
@@ -145,6 +177,10 @@ classes:
         range: SequencingRead
         multivalued: true
         inverse: SequencingRead.sample
+      system_mutable_field:
+        range: string
+        annotations:
+          system_writable_only: True
     annotations:
       plural: Samples
 
@@ -159,10 +195,14 @@ classes:
       protocol:
         range: SequencingProtocol
         required: true
+        annotations:
+          mutable: false
       r1_file:
         range: File
+        readonly: true
       r2_file:
         range: File
+        readonly: true
       technology:
         range: SequencingTechnology
         required: true
@@ -172,12 +212,16 @@ classes:
       primer_file:
         range: GenomicRange
         inverse: GenomicRange.sequencing_reads
+        annotations:
+          mutable: false
       clearlabs_export:
         range: boolean
         required: true
       taxon:
         range: Taxon
         inverse: Taxon.sequencing_reads
+        annotations:
+          mutable: false
     annotations:
       plural: SequencingReads
 
@@ -188,6 +232,7 @@ classes:
     attributes:
       file:
         range: File
+        readonly: true
       sequencing_reads:
         range: SequencingRead
         inverse: SequencingRead.primer_file
@@ -223,6 +268,30 @@ classes:
     annotations:
       plural: Taxa
 
+  SystemWritableOnlyType:
+    is_a: Entity
+    mixins:
+      - EntityMixin
+    attributes:
+      name:
+        range: string
+        required: true
+    annotations:
+      system_writable_only: true
+      plural: SystemWritableOnlyTypes
+
+  ImmutableType:
+    is_a: Entity
+    mixins:
+      - EntityMixin
+    attributes:
+      name:
+        range: string
+        required: true
+    annotations:
+      mutable: false
+      plural: ImmutableTypes
+
   UpstreamDatabase:
     is_a: Entity
     mixins:
@@ -247,3 +316,5 @@ classes:
         range: uuid
         identifier: true
         inverse: entity.id
+        annotations:
+          hidden: true
