--- a/entities/schema/platformics.yaml
+++ b/entities/schema/platformics.yaml
@@ -3,6 +3,12 @@ title: CZID Platformics Bio-Entities Schema
 name: platformics
 default_range: string
 
+settings:
+  float: "\\d+[\\.\\d+]"
+  unit: "\\S+"
+  email: "\\S+@\\S+{\\.\\w}+"
+  not_empty_string: "[^\\s]+"
+  
 types:
   string:
     uri: xsd:string
@@ -142,6 +148,11 @@ classes:
         range: uuid
         readonly: true # The API handles generating the values for these fields
         required: true
+#      types:
+#        range: string
+#        designates_type: true
+#        annotations:
+#          hidden: true
       producing_run_id:
         range: uuid
         required: true
@@ -149,12 +160,12 @@ classes:
           mutable: false  # This field can't be modified by an `Update` mutation
           system_writable_only: True
       owner_user_id:
-        range: int
+        range: integer
         minimum_value: 0
         required: true
         readonly: true
       collection_id:
-        range: int
+        range: integer
         minimum_value: 0
         required: true
         annotations:
@@ -211,7 +222,7 @@ classes:
       compression_type:
         range: string
       size:
-        range: int
+        range: integer
         minimum_value: 0
       # Information about file upload (optional)
       upload_client:
@@ -233,7 +244,7 @@ classes:
     attributes:
       # If this Sample is a copy of what's in the Rails DB, store its ID here
       rails_sample_id:
-        range: int
+        range: integer
         annotations:
           mutable: false  # This field can't be modified by an `Update` mutation
           system_writable_only: True
@@ -241,6 +252,10 @@ classes:
       name:
         range: string
         required: true
+        structured_pattern:
+          syntax: "{not_empty_string}"
+          interpolated: true
+          partial_match: true
       sample_type:
         range: string
         required: true
@@ -555,27 +570,27 @@ classes:
         annotations:
           mutable: false
       total_reads:
-        range: int
+        range: integer
         annotations:
           mutable: false
       mapped_reads:
-        range: int
+        range: integer
         annotations:
           mutable: false
       ref_snps:
-        range: int
+        range: integer
         annotations:
           mutable: false
       n_actg:
-        range: int
+        range: integer
         annotations:
           mutable: false
       n_missing:
-        range: int
+        range: integer
         annotations:
           mutable: false
       n_ambiguous:
-        range: int
+        range: integer
         annotations:
           mutable: false
       coverage_depth:
@@ -591,7 +606,7 @@ classes:
         annotations:
           mutable: false
       coverage_total_length:
-        range: int
+        range: integer
         annotations:
           mutable: false
       coverage_viz:
