--- a/workflows/schema/workflows.yaml
+++ b/workflows/schema/workflows.yaml
@@ -58,12 +58,12 @@ classes:
         annotations:
           hidden: true # This field shouldn't exist but we're living with it for now since it's part of the base Entity class.
       owner_user_id:
-        range: int
+        range: integer
         minimum_value: 0
         readonly: true # The API handles generating the values for these fields
         required: true
       collection_id:
-        range: int
+        range: integer
         minimum_value: 0
         required: true
         annotations:
