Make our Entity model more closely reflect our real db table.

--- a/entities/schema/platformics.yaml
+++ b/entities/schema/platformics.yaml
@@ -148,11 +148,11 @@ classes:
         range: uuid
         readonly: true # The API handles generating the values for these fields
         required: true
-#      types:
-#        range: string
-#        designates_type: true
-#        annotations:
-#          hidden: true
+      type:
+        range: string
+        designates_type: true
+        annotations:
+          hidden: true
       producing_run_id:
         range: uuid
         required: true
