--- a/entities/schema/platformics.yaml
+++ b/entities/schema/platformics.yaml
@@ -260,7 +260,10 @@ classes:
       name:
         range: string
         required: true
-        pattern: '.*{4,64}'
+        pattern: '\d'
+        annotations:
+            minimum_length: 4
+            maximum_length: 64
       sample_type:
         range: string
         required: true
