--- a/entities/.happy/config.json
+++ b/entities/.happy/config.json
@@ -20,8 +20,8 @@
                     "CERBOS_URL": "http://localhost:3592",
                     "DEFAULT_UPLOAD_BUCKET": "local-bucket",
                     "DEFAULT_UPLOAD_PROTOCOL": "s3",
-                    "JWK_PRIVATE_KEY_FILE": "/tmp/private_key.pem",
-                    "JWK_PUBLIC_KEY_FILE": "/tmp/public_key.pem",
+                    "JWK_PRIVATE_KEY_FILE": "/var/policies/private_key.pem",
+                    "JWK_PUBLIC_KEY_FILE": "/var/policies/public_key.pem",
                     "WORKERS": "2"
                 },
                 "emptydir_volumes": [
@@ -97,8 +97,8 @@
                     "CERBOS_URL": "http://localhost:3592",
                     "DEFAULT_UPLOAD_BUCKET": "local-bucket",
                     "DEFAULT_UPLOAD_PROTOCOL": "s3",
-                    "JWK_PRIVATE_KEY_FILE": "/tmp/private_key.pem",
-                    "JWK_PUBLIC_KEY_FILE": "/tmp/public_key.pem",
+                    "JWK_PRIVATE_KEY_FILE": "/var/policies/private_key.pem",
+                    "JWK_PUBLIC_KEY_FILE": "/var/policies/public_key.pem",
                     "WORKERS": "2"
                 },
                 "emptydir_volumes": [
