CZID-9017 - Add input value validation for entity mutations (#186)

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,9 +4,12 @@ entities/api/schema.graphql	linguist-generated=true
 entities/api/queries.py	linguist-generated=true
 entities/api/mutations.py	linguist-generated=true
 entities/api/types/*	linguist-generated=true
+entities/api/validators/*	linguist-generated=true
 entities/database/models/*	linguist-generated=true
 entities/cerbos/policies/*	linguist-generated=true
 entities/support/enums.py	linguist-generated=true
 entities/schema/README.md	linguist-generated=true
 entities/test_infra/factories/* linguist-generated=true
 entities/test_infra/factories/main.py linguist-generated=false
+workflows/api/types/*	linguist-generated=true
+workflows/api/validators/*	linguist-generated=true
