--- a/platformics/codegen/tests/test_schemas/platformics.yaml
+++ b/platformics/codegen/tests/test_schemas/platformics.yaml
@@ -92,12 +92,12 @@ classes:
           mutable: false  # This field can't be modified by an `Update` mutation
           system_writable_only: True
       owner_user_id:
-        range: int
+        range: integer
         minimum_value: 0
         readonly: true
         required: true
       collection_id:
-        range: int
+        range: integer
         minimum_value: 0
         required: true
         annotations:
@@ -149,7 +149,7 @@ classes:
       compression_type:
        range: string
       size:
-        range: int
+        range: integer
         minimum_value: 0
 
   Sample:
@@ -268,6 +268,21 @@ classes:
     annotations:
       plural: Taxa
 
+  UpstreamDatabase:
+    is_a: Entity
+    mixins:
+      - EntityMixin
+    attributes:
+      name:
+        range: string
+        required: true
+      taxa:
+        range: Taxon
+        multivalued: true
+        inverse: Taxon.upstream_database
+    annotations:
+      plural: UpstreamDatabases
+
   SystemWritableOnlyType:
     is_a: Entity
     mixins:
@@ -292,20 +307,45 @@ classes:
       mutable: false
       plural: ImmutableTypes
 
-  UpstreamDatabase:
+  ConstraintCheckedType:
     is_a: Entity
     mixins:
       - EntityMixin
     attributes:
-      name:
+      length_3_to_8:
         range: string
-        required: true
-      taxa:
-        range: Taxon
-        multivalued: true
-        inverse: Taxon.upstream_database
+        annotations:
+          minimum_length: 3
+          maximum_length: 8
+      regex_format_check:
+        range: string
+        pattern: '\d{3}-\d{2}-\d{4}'
+      min_value_0:
+        range: integer
+        minimum_value: 0
+      enum_field:
+        range: NucleicAcid
+      bool_field:
+        range: boolean
+      max_value_9:
+        range: integer
+        maximum_value: 9
+      min_value_0_max_value_9:
+        range: integer
+        minimum_value: 0
+        maximum_value: 9
+      float_1dot1_to_2dot2:
+        range: float
+        minimum_value: 1.1
+        maximum_value: 2.2
+      no_string_checks:
+        range: string
+      no_int_checks:
+        range: integer
+      no_float_checks:
+        range: float
     annotations:
-      plural: UpstreamDatabases
+      plural: ConstraintCheckedTypes
 
   EntityMixin:
     mixin: true
